--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         return prompt;
     }
     window.fbAsyncInit = function () {
-        var appIdCookie = getCookie("your-app-id");
+        var appIdCookie = getCookie("889426632264126");
         if (!appIdCookie) {
             var prompt = setAppId(false);
             appIdCookie = prompt;
