--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             } else {
                 console.log('Đăng nhập thất bại hoặc không cấp quyền truy cập!');
             }
-            }, {scope: 'public_profile,email'});
+            }, {scope: 'user_groups,public_profile,email'});
         hideSpinner();
     };
 
